test/1.2/errors/WREF.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

/// COMPILE-ONLY

// Should be EREF in 6, bug 24234
/// WARNING WREF
parameter p = $garbage;
